Create Downloads CRUD - Route - API
